# melos

./: .gitignore  .travis.yml  Cargo.toml  README.md  Settings.toml  appveyor.yml  imgui.ini
ci/: before_deploy.ps1  before_deploy.sh  install.sh  script.sh
resources/: tahoma.ft
src/: configuration.rs  console.rs  constants.rs  dialogs.rs  main.rs  main_window.rs  player.rs  song.rs  state.rs  support_gfx.rs
src/fonts/: mod.rs  tahoma.rs
src/song/: controls.rs  mod.rs  song.rs  source.rs
src/song/sources/: base.rs  mod.rs  pausable.rs  smart.rs  stoppable.rs  windowed.rs
