[package]
name = "melos"
version = "0.1.1"
authors = ["AlexNav73 <fifthhorseman@mail.ru>"]

[dependencies]
gfx = "0.16"
gfx_window_glutin = "0.19"
glutin = "0.11.0"
imgui = { git = "https://github.com/AlexNav73/imgui-rs.git" }
imgui-gfx-renderer = { git = "https://github.com/AlexNav73/imgui-rs.git" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
ignore = "0.4.1"
config = "0.8.0"
lazy_static = "1.0.0"
failure = "0.1.1"

[dependencies.rodio]
git = "https://github.com/AlexNav73/rodio.git"
branch = "mp3"
version = "0.6.0"
default-features = false
features = ["mp3"]
